--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "license": "MIT",
   "main": "api/api.js",
   "dependencies": {
+    "bignumber.js": "^2.3.0",
     "bluebird": "^3.1.1",
     "bs58check": "^1.0.6",
     "couchbase": "^2.1.2",
     "cors": "^2.7.1",
     "elliptic": "^6.0.2",
     "express": "^4.13.3",
+    "lodash": "^4.8.2",
     "ripemd160": "^1.0.1",
     "swagger-tools": "^0.9.9",
     "yamljs": "0.2.4"
